test/stack-effects-2.err.expect
test/stack-effects-2.ktn:1:6: error: cannot match stack type .s1 int with .s2
test/stack-effects-2.ktn:1:2: note: int is from here
test/stack-effects-2.ktn:1:6: note: .s1 is from here
test/stack-effects-2.ktn:1:6: note: .s2 is from here
